--- a/convite.html
+++ b/convite.html
@@ -16,7 +16,7 @@
         body {
             font-family: "Roboto", sans-serif;
             text-align: center;
-            background-image: url("pexels-pixabay-40744.jpg");
+            background-image: url("nova_imagem_convite.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -108,8 +108,8 @@
 
 <body>
     <div class="container">
-        <h1><strong>Você está convidado!</strong></h1>
-        <p>Será uma grande honra contar com a sua presença na festa de 15 anos da Gianna!</p>
+        <h1><strong>Gianna faz 15 anos!</strong></h1>
+        <p>Será uma grande honra contar com a sua presença na minha festa de aniversario!</p>
         <p>
             <strong>Data:</strong> 22 de Fevereiro de 2025<br>
             <strong>Local:</strong> Rua Tarcila do Amaral n°400 Campo Belo<br>
@@ -118,7 +118,7 @@
                 <span class="material-icons" style="margin-right: 5px;">directions</span> Como Chegar
             </a>
             <br>
-            <strong>Horário:</strong> 16h
+            <strong>Horário:</strong> 20h
         </p>
         <a href="https://wa.me/5516994249009?text=Olá!%20Confirmo%20minha%20presença%20na%20festa%20de%20aniversário!"
             class="button" target="_blank">Confirmar Presença</a>
